some squirrel stuff

--- a/Text_Adv_Game_Lab/Text_Adv_Game_Lab.vcxproj.filters
+++ b/Text_Adv_Game_Lab/Text_Adv_Game_Lab.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="CommandInterpreter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NPC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CommandInterpreter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NPC.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
