--- a/Text_Adv_Game_Lab/Text_Adv_Game_Lab.vcxproj
+++ b/Text_Adv_Game_Lab/Text_Adv_Game_Lab.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="CommandInterpreter.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="riddle_handler.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Text_Adv_Game_Lab.cpp" />
@@ -142,6 +143,7 @@
     <ClInclude Include="CommandInterpreter.h" />
     <ClInclude Include="header.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="riddle_handler.h" />
     <ClInclude Include="Room.h" />
